# FileMorph

./: LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/i18n/fr/: RELEASE_NOTES.md
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: convertions.rs  files_utils.rs  main.rs
src/assets/: nav_logo.json
src/async/: fs.ts  path.ts
src/components/: InputSection.tsx  MainSection.tsx  Select.tsx
src/components/Buttons/: Back.tsx  Download.tsx  Refresh.tsx  backButton.css  downloadButton.css  styles.css  styles.scss
src/components/Error/: Alert.tsx
src/components/Loader/: App.tsx  AppLoader.css  File.tsx  FileLoader.css  styles.css  styles.scss
src/components/Navbar/: Navbar.css  Navbar.css.map  Navbar.scss  Navbar.tsx
src/components/Success/: Alert.tsx
src/components/Warning/: Alert.tsx
src/hooks/: useFile.ts  useFormat.ts
src/types/: types.ts
