[package]
name = "file_morph"
version = "1.0.0"
description = "A efficient lightweight file converter"
authors = ["yatsu"]
license = "MIT"
repository = "https://github.com/DevYatsu/fileMorph"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-open", "dialog-save", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
converter_buddy = "0.2.1"
async-trait = "0.1.68"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
